--- a/Maalde/MultiFC project.ipynb
+++ b/Maalde/MultiFC project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
        "[27870 rows x 12 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
        "[3486 rows x 11 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
        "Name: label, Length: 27870, dtype: object>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,16 +745,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pc\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:7123: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "of pandas will change to not sort by default.\n",
+      "\n",
+      "To accept the future behavior, pass 'sort=False'.\n",
+      "\n",
+      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
+      "\n",
+      "  sort=sort,\n"
+     ]
+    }
+   ],
    "source": [
     "data = df_train.append(df_test, ignore_index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1109,7 @@
        "[31356 rows x 12 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1120,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(31356, 12)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1261,7 @@
        "[31356 rows x 12 columns]>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,6 +1269,133 @@
    "source": [
     "data.describe"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.layers import Input, Embedding, LSTM, Bidirectional, Dense, Dropout\n",
+    "from tensorflow.keras.models import Model\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix, classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_input = Input(shape =(31356,12)   , dtype = ''  , name = 'main_input')\n",
+    "E = Embedding(output_dim = , input_dim = , input_length = )(main_input)\n",
+    "bilstm_out = Bidirectional(LSTM(30)).(E)\n",
+    "\n",
+    "## auxiliary output\n",
+    "\n",
+    "aux_output = Dense(1, activation = 'softmax', name = 'aux_output').(bilstm_out)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Concatenation\n",
+    "\n",
+    "aux_input = Input(shape = (,), name = 'aux_input')\n",
+    "x = tensorflow.keras.layers.concatenate([bilstm_out, aux_input])\n",
+    "\n",
+    "##Dense layers\n",
+    "\n",
+    "x = Dense(60, activation = 'relu')(x)\n",
+    "x = Dense(60, activation = 'relu')(x)\n",
+    "\n",
+    "main_output = Dense(1,activation = 'softmax', name = 'main_output')(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###Model\n",
+    "\n",
+    "model = Model(inputs =[main_input, aux_input], outputs = [main_output, aux_output])\n",
+    "model.compile(optimizer = 'rmsprop', loss ={'main_output': 'mean_squared_error', 'aux_output':'mean_squared_error'}, loss_weights = {'main_output':1., 'aux_output'= 0.1})\n",
+    "model.fit({'main_input':test_data, 'aux_input': dev_data},{'main_output': test_labels, 'aux_outout': dev_labels}, epochs = 3, bathsize = 100)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## predict\n",
+    "\n",
+    "prediction = model.predict([train_data, test_data])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Metrics\n",
+    "\n",
+    "print(metrics.confusion_matrix(true_labels, predicted_labels))\n",
+    "\n",
+    "print(metrics.classification_report(true_labels, predicted_labels, digits = 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
