--- a/Maalde/MultiFC project .ipynb
+++ b/Maalde/MultiFC project .ipynb
@@ -1335,7 +1335,7 @@
     "\n",
     "model = Model(inputs =[main_input, aux_input], outputs = [main_output, aux_output])\n",
     "model.compile(optimizer = 'rmsprop', loss ={'main_output': 'mean_squared_error', 'aux_output':'mean_squared_error'}, loss_weights = {'main_output':1., 'aux_output'= 0.1})\n",
-    "model.fit({'main_input':test_data, 'aux_input': dev_data},{'main_output': test_labels, 'aux_outout': dev_labels}, epochs = 3, bathsize = 100)\n"
+    "model.fit({'main_input':xtrain_data, 'aux_input': dev_data},{'main_output': ytrain_labels, 'aux_outout': dev_labels}, epochs = 3, bathsize = 100)\n"
    ]
   },
   {
@@ -1346,7 +1346,7 @@
    "source": [
     "## predict\n",
     "\n",
-    "prediction = model.predict([train_data, test_data])\n"
+    "prediction = model.predict([true_labels, predicted_labels])\n"
    ]
   },
   {
