--- a/EinarTest/FinalEinar/CreateDataFrames2.ipynb
+++ b/EinarTest/FinalEinar/CreateDataFrames2.ipynb
@@ -233,8 +233,8 @@
    ],
    "source": [
     "\n",
-    "df_train = df_train.loc[:, df_train.columns != 'label'].loc[df_train['claimID'].isin(df_snip['claimID'].unique())]\n",
-    "df_dev =df_dev.loc[:, df_dev.columns != 'label'].loc[df_dev['claimID'].isin(df_snip['claimID'].unique())]\n",
+    "df_train = df_train.loc[df_train['claimID'].isin(df_snip['claimID'].unique())]\n",
+    "df_dev =df_dev.loc[df_dev['claimID'].isin(df_snip['claimID'].unique())]\n",
     "\n",
     "\n",
     "df_train.replace(to_replace = 'None',value=np.nan ,inplace = True)\n",
